Добавил аунтификацию по JWT